[package]
name = "safe_drive_msg"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
convert_case = "0.6"
checksumdir = "0.3"
t4_idl_parser = { path = "../idl_parser" }
num-bigint = "0.4"
num-traits = "0.2"
